--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alexandra de Cadaval</title>
-    <link rel="stylesheet" href="dist/app.css">
+    <link rel="stylesheet" href="dist/app.css" />
   </head>
   <body class="home">
-    <header class="header">
+    <header class="header header__desktop">
       <nav class="header__nav">
         <ul class="header__menu">
-          <li><a href="about.html">About</a></li>
-          <li>
+          <li class="header__menu__item"><a href="about.html">About</a></li>
+          <li class="header__menu__item header__menu__item--has-child">
             <a>Art Projects</a>
             <ul class="header__sub-menu">
-              <li><a href="art-projects/esther-mahlangu.html">Esther Mahlangu</a></li>
+              <li class="header__menu__item">
+                <a href="art-projects/esther-mahlangu.html">Esther Mahlangu</a>
+              </li>
             </ul>
           </li>
         </ul>
@@ -23,23 +25,82 @@
       <div class="header__social">
         <ul>
           <li>Contacts</li>
-          <li>I</li>
-          <li>f</li>
-          <li>V</li>
+          <li>
+            <a href="#"
+              ><img src="./assets/img/instagram.svg" alt="instragram"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/img/facebook.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./assets/img/vimeo.svg" alt="vimeo" /></a>
+          </li>
         </ul>
       </div>
     </header>
+    <header class="header header__mobile">
+      <nav class="header__nav">
+        <ul class="header__menu">
+          <li class="header__menu__item"><a href="about.html">About</a></li>
+          <li class="header__menu__item header__menu__item--has-child">
+            <a>Art Projects</a>
+            <ul class="header__sub-menu">
+              <li class="header__menu__item">
+                <a href="art-projects/esther-mahlangu.html">Esther Mahlangu</a>
+              </li>
+            </ul>
+          </li>
+          <li>Contacts</li>
+          <ul class="header__social">
+            <li>
+              <a href="#"
+                ><img src="./assets/img/instagram.svg" alt="instragram"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./assets/img/facebook.svg" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./assets/img/vimeo.svg" alt="vimeo" /></a>
+            </li>
+          </ul>
+        </ul>
+      </nav>
+      <div class="header__burger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </header>
     <main class="main">
-        <div class="main__logo">
-            <img src="./assets/img/alexandra-cadaval-logo.svg" alt="alexandra-cadaval-logo">
-        </div>
-        <div class="main__description">
-          <p>There is a magic that can only be found in the world of traditions, where creativity is born and thrives.
-Today traditions and their art forms are in danger of disappearing. In a world that has never moved so quickly,
-where everything has become digital, these traditions, the world’s only true testimonies,
-along with its authentic oral libraries, need to be showcased, supported and protected.</p>
-        </div>
+      <div class="main__logo">
+        <img
+          src="./assets/img/alexandra-cadaval-logo.svg"
+          alt="alexandra-cadaval-logo"
+        />
+      </div>
+      <div class="main__description">
+        <p>
+          There is a magic that can only be found in the world of traditions,
+          where creativity is born and thrives. Today traditions and their art
+          forms are in danger of disappearing. In a world that has never moved
+          so quickly, where everything has become digital, these traditions, the
+          world’s only true testimonies, along with its authentic oral
+          libraries, need to be showcased, supported and protected.
+        </p>
+      </div>
     </main>
-    <script type="module" src="assets/js/main.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+      integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
