--- a/about.html
+++ b/about.html
@@ -2,75 +2,176 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esther Mahlangu – Alexandra de Cadaval</title>
-    <link rel="stylesheet" href="dist/app.css">
+    <link rel="stylesheet" href="dist/app.css" />
   </head>
   <body class="about">
-    <header class="header">
+    <header class="header header__desktop">
       <nav class="header__nav">
-        <ul>
-          <li>About</li>
-          <li>Art Projects</li>
+        <ul class="header__menu">
+          <li class="header__menu__item header__menu__item--active">
+            <a href="about.html">About</a>
+          </li>
+          <li class="header__menu__item header__menu__item--has-child">
+            <a>Art Projects</a>
+            <ul class="header__sub-menu">
+              <li class="header__menu__item">
+                <a href="art-projects/esther-mahlangu.html">Esther Mahlangu</a>
+              </li>
+            </ul>
+          </li>
         </ul>
       </nav>
       <div class="header__logo">
-        <a href="/"><img src="./assets/img/alexandra-cadaval-logo.svg" alt="Alexandra de Cadaval"></a>
+        <a href="/"
+          ><img
+            src="./assets/img/alexandra-cadaval-logo.svg"
+            alt="Alexandra de Cadaval"
+        /></a>
       </div>
       <div class="header__social">
         <ul>
           <li>Contacts</li>
-          <li>I</li>
-          <li>f</li>
-          <li>V</li>
+          <li>
+            <a href="#"
+              ><img src="./assets/img/instagram.svg" alt="instragram"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/img/facebook.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./assets/img/vimeo.svg" alt="vimeo" /></a>
+          </li>
         </ul>
       </div>
     </header>
+    <header class="header header__mobile">
+      <nav class="header__nav">
+        <ul class="header__menu">
+          <li class="header__menu__item header__menu__item--active">
+            <a href="../about.html">About</a>
+          </li>
+          <li class="header__menu__item header__menu__item--has-child">
+            <a>Art Projects</a>
+            <ul class="header__sub-menu">
+              <li class="header__menu__item">
+                <a href="art-projects/esther-mahlangu.html">Esther Mahlangu</a>
+              </li>
+            </ul>
+          </li>
+          <li>Contacts</li>
+          <ul class="header__social">
+            <li>
+              <a href="#"
+                ><img src="./assets/img/instagram.svg" alt="instragram"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./assets/img/facebook.svg" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./assets/img/vimeo.svg" alt="vimeo" /></a>
+            </li>
+          </ul>
+        </ul>
+      </nav>
+      <div class="header__logo">
+        <a href="/"
+          ><img
+            src="./assets/img/alexandra-cadaval-logo.svg"
+            alt="Alexandra de Cadaval"
+        /></a>
+      </div>
+      <div class="header__burger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </header>
     <main class="main">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-8">
-                    <p>
-                        I have been incredibly fortunate to share a connection with the traditional world, in its many guises. Firstly, through music, before ritual, ornamentation, and then to weaving. I have created platforms and projects aimed at helping, even if only 
-to a small degree, some of these art forms, bringing them to the fore to be seen in their authenticity. If we look at intangible cultural heritage today there are increasingly more forms being classified. At the same time, globalisation is placing 
-our world and its traditions at major risk. Their history, and ours, is disappearing without a trace.</p> 
-<p>The projects I have created have all come from the heart. They have arisen spontaneously, through a powerful connection 
-to each of these artists. Little by little, in the natural development of their own creation, I will share more and more of them, in the hope that you will feel the same connection too.
-                    </p>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-6">
-                    <figure class="about__image">
-                        <img src="./assets/img/about/burkina-trip.jpg" alt="Burkina Trip with Mauro Pinto">
-                        <figcaption class="small-text">Burkina Trip with Mauro Pinto</figcaption>
-                    </figure>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-8">
-                    <h1 class="about__title">Alexandra de Cadaval</h1>
-                    <p>
-                        With a degree in Cultural Industries and co-director of the World Sacred Spirit Festival, Alexandra boasts vast 
-                        international experience in the arts and in artistic production, having worked with traditional and contemporary artist 
-                        and with disadvantaged populations.
-                    </p>
-                    <p>
-                        Since gaining her degree in Cultural Industries from City, University of London, in 2005, Alexandra has been devoted to music and the arts. Working closely with renowned French artistic director Alain Weber, she has directed and organised music and cultural festivals, including Festival Évora Clássica, Festival Os Orientais, and Festival Évora Africa, 
-all in Portugal; and the Sacred Spirit Festival, in India.
-                    </p>
-                    <p>
-                        Her experience working with cultural heritage alongside Alain Weber has helped her develop skills with a view to creating platforms for rural art forms and nurtured her passion for traditional cultures. Nowadays, having worked extensively in Africa, she has also developed a deep passion for African contemporary art, creating several international exhibitions.
-                    </p>
-                    <button class="about__read-more-btn small-text">read more</button>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-sm-8">
+            <p>
+              I have been incredibly fortunate to share a connection with the
+              traditional world, in its many guises. Firstly, through music,
+              before ritual, ornamentation, and then to weaving. I have created
+              platforms and projects aimed at helping, even if only to a small
+              degree, some of these art forms, bringing them to the fore to be
+              seen in their authenticity. If we look at intangible cultural
+              heritage today there are increasingly more forms being classified.
+              At the same time, globalisation is placing our world and its
+              traditions at major risk. Their history, and ours, is disappearing
+              without a trace.
+            </p>
+            <p>
+              The projects I have created have all come from the heart. They
+              have arisen spontaneously, through a powerful connection to each
+              of these artists. Little by little, in the natural development of
+              their own creation, I will share more and more of them, in the
+              hope that you will feel the same connection too.
+            </p>
+          </div>
         </div>
+        <div class="row justify-content-center">
+          <div class="col-8 col-sm-6">
+            <figure class="about__image">
+              <img
+                src="./assets/img/about/burkina-trip.jpg"
+                alt="Burkina Trip with Mauro Pinto"
+              />
+              <figcaption class="small-text">
+                Burkina Trip with Mauro Pinto
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-8">
+            <h1 class="about__title">Alexandra de Cadaval</h1>
+            <p>
+              With a degree in Cultural Industries and co-director of the World
+              Sacred Spirit Festival, Alexandra boasts vast international
+              experience in the arts and in artistic production, having worked
+              with traditional and contemporary artist and with disadvantaged
+              populations.
+            </p>
+            <p>
+              Since gaining her degree in Cultural Industries from City,
+              University of London, in 2005, Alexandra has been devoted to music
+              and the arts. Working closely with renowned French artistic
+              director Alain Weber, she has directed and organised music and
+              cultural festivals, including Festival Évora Clássica, Festival Os
+              Orientais, and Festival Évora Africa, all in Portugal; and the
+              Sacred Spirit Festival, in India.
+            </p>
+            <p>
+              Her experience working with cultural heritage alongside Alain
+              Weber has helped her develop skills with a view to creating
+              platforms for rural art forms and nurtured her passion for
+              traditional cultures. Nowadays, having worked extensively in
+              Africa, she has also developed a deep passion for African
+              contemporary art, creating several international exhibitions.
+            </p>
+            <button class="about__read-more-btn small-text">read more</button>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer class="footer small-text">
-        © ALL RIGHTS RESERVED, 2022
-    </footer>
-    <script type="module" src="assets/js/main.js"></script>
+    <footer class="footer small-text">© ALL RIGHTS RESERVED, 2022</footer>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+      integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
